# raspi-control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run-client-build.sh  run-client-test.sh  run-client.sh  run.sh  todo
app/: App.cpp  App.h
client/: CMakeLists.txt
client/app/: App.cpp  App.h  CMakeLists.txt  test-App.cpp
client/cmake/: build_config.cmake  check_dependencies.cmake  test.cmake
client/logger/: CMakeLists.txt  Logger.cpp  Logger.h  test-Logger.cpp
client/main/: CMakeLists.txt  main.cpp
client/network_handler/: CMakeLists.txt  NetworkHandler.h
client/server_discovery/: CMakeLists.txt  ServerDiscovery.cpp  ServerDiscovery.h
client/test/: main.cpp
cmake/: build_config.cmake
dependencies/: README.md
dependencies/logger/: CMakeLists.txt  ILogger.h  Logger.cpp  Logger.h
doc/: system_topology.puml
logger/: ILogger.h  Logger.cpp  Logger.h  LoggerMsg.h  logger.cpp  logger.h  logger_messages.h
network_handler/: NetworkHandler.cpp
scripts/: exit_helpers.sh  print_utils.sh  tool_helpers.sh  usage.sh
server/: CMakeLists.txt
server/app/: App.cpp  App.h
server/cmake/: raspi-toolchain.cmake
server/core/: CMakeLists.txt  SignalHandler.h
server/main/: main.cpp
server/network/: CMakeLists.txt  UdpDiscoveryServer.cpp  UdpDiscoveryServer.h
shared/logger/: Logger.cpp  LoggerMsg.h  test-Logger.cpp
src_main/: main.cpp
